# baxter_moveit_application

./: .gitignore  CMakeLists.txt  package.xml
draw_data/: 0euler_error_draw.txt  0joint_angles_draw.txt  0pos_error_draw.txt  0rot_error_angle_draw.txt  10001euler_error_draw.txt  10042euler_error_draw.txt  100euler_error_draw.txt  100joint_angles_draw.txt  100pos_error_draw.txt  10111euler_error_draw.txt  10111rot_error_angle_draw.txt  10123euler_error_draw.txt  10123rot_error_angle_draw.txt  10124euler_error_draw.txt  10124rot_error_angle_draw.txt  10125euler_error_draw.txt  10125rot_error_angle_draw.txt  10151euler_error_draw.txt  10156euler_error_draw.txt  10156rot_error_angle_draw.txt  10157euler_error_draw.txt  10157rot_error_angle_draw.txt  10192euler_error_draw.txt  10192rot_error_angle_draw.txt  10193euler_error_draw.txt  10193rot_error_angle_draw.txt  10194euler_error_draw.txt  10194rot_error_angle_draw.txt  101euler_error_draw.txt  101joint_angles_draw.txt  101pos_error_draw.txt  10205euler_error_draw.txt  10205rot_error_angle_draw.txt  10207rot_error_angle_draw.txt  10232euler_error_draw.txt  10232rot_error_angle_draw.txt  10233euler_error_draw.txt  10233rot_error_angle_draw.txt  10234euler_error_draw.txt  10234rot_error_angle_draw.txt  (+4320 more)
draw_data/extend_success_rate/: extend_succ_rate.py  pose00.txt  pose01.txt  pose02.txt  pose03.txt  pose10.txt  pose100.txt  pose101.txt  pose102.txt  pose103.txt  pose110.txt  pose111.txt  pose112.txt  pose113.txt  pose12.txt  pose120.txt  pose121.txt  pose122.txt  pose123.txt  pose13.txt  pose130.txt  pose131.txt  pose132.txt  pose133.txt  pose140.txt  pose141.txt  pose142.txt  pose143.txt  pose150.txt  pose151.txt  pose152.txt  pose153.txt  pose160.txt  pose161.txt  pose162.txt  pose163.txt  pose170.txt  pose171.txt  pose172.txt  pose173.txt  (+160 more)
draw_data/manipulability/: fuck.txt  fuck2.txt  manipulability_draw_data.py  manipulability_draw_data_new.py  pose00.txt  pose01.txt  pose02.txt  pose03.txt  pose10.txt  pose11.txt  pose12.txt  pose13.txt  pose20.txt  pose21.txt  pose22.txt  pose23.txt  pose30.txt  pose31.txt  pose32.txt  pose33.txt  pose40.txt  pose41.txt  pose42.txt  pose43.txt
draw_data/performance/: no_try_fix_pose1.csv  yes_try_fix_pose0.csv  yes_try_fix_pose1.csv  yes_try_fix_pose2.csv  yes_try_fix_pose3.csv
draw_data/rate_manipulability/: pose00.txt  pose01.txt  pose02.txt  pose03.txt  pose10.txt  pose100.txt  pose101.txt  pose102.txt  pose103.txt  pose11.txt  pose110.txt  pose111.txt  pose112.txt  pose113.txt  pose12.txt  pose120.txt  pose121.txt  pose122.txt  pose123.txt  pose13.txt  pose130.txt  pose131.txt  pose132.txt  pose133.txt  pose140.txt  pose141.txt  pose142.txt  pose143.txt  pose150.txt  pose151.txt  pose152.txt  pose153.txt  pose160.txt  pose161.txt  pose162.txt  pose163.txt  pose170.txt  pose171.txt  pose172.txt  pose173.txt  (+161 more)
draw_data/reached_index/: pose00.txt  pose01.txt  pose02.txt  pose03.txt  reached_index.py
include/dual_rrt_star/: dual_cbirrt_star.h
launch/: multi_plan.launch  one_plan.launch  path_planner_compare.launch
moveit_scene/: aaa.scene  env1_table (copy).scene  env1_table.scene  env1_wall_right.scene  experiment1.scene  experiment2.scene  experiment_left_right.scene  manipulability.scene  narrow.scene  object.scene  pillar.scene  sphere.scene  table.scene  table2.scene  test.scene
scripts/: draw_traj.py  joint_NN_controller.py  joint_space_result.py  path_planner_compare.py  publish_joint_state.py  trajectory_compare.py
scripts/data/: left_Cartesian_goal_draw_x.txt  left_Cartesian_goal_draw_y.txt  left_Cartesian_goal_draw_z.txt  left_Cartesian_now_draw_x.txt  left_Cartesian_now_draw_y.txt  left_Cartesian_now_draw_z.txt  left_draw_err_pos.txt  left_draw_err_vel.txt  left_draw_goal_pos.txt  left_draw_goal_vel.txt  left_draw_now_pos.txt  left_draw_now_vel.txt  left_draw_tau.txt  left_draw_time.txt  right_Cartesian_goal_draw_x.txt  right_Cartesian_goal_draw_y.txt  right_Cartesian_goal_draw_z.txt  right_Cartesian_now_draw_x.txt  right_Cartesian_now_draw_y.txt  right_Cartesian_now_draw_z.txt  right_draw_err_pos.txt  right_draw_err_vel.txt  right_draw_goal_pos.txt  right_draw_goal_vel.txt  right_draw_now_pos.txt  right_draw_now_vel.txt  right_draw_tau.txt
scripts/left/: left_joint_E0.eps  left_joint_E1.eps  left_joint_S0.eps  left_joint_S1.eps  left_joint_W0.eps  left_joint_W1.eps  left_joint_W2.eps  left_torque.eps
scripts/right/: end_effector_position.eps  right_joint_E0.eps  right_joint_E1.eps  right_joint_S0.eps  right_joint_S1.eps  right_joint_W0.eps  right_joint_W1.eps  right_joint_W2.eps  right_torque.eps
src/: 20200407.cpp  dual_cbirrt_star.cpp  minimum_jerk_test.cpp  minimum_time_nlopt.cpp  one_plan.cpp
src/20191025/: 20191025_test1.cpp  20191025_test2.cpp  readme.txt
src/20191026/: 20191026_test1.cpp  readme.txt
src/20191027/: 20191027_test1.cpp  20191027_test2.cpp  readme.txt
src/20191028/: 20191028_test1.cpp  20191028_test2.cpp  readme.txt
src/20191029/: 20191029_test1.cpp  20191029_test2.cpp  20191029_test3.cpp
src/20191030/: 20191030_test1.cpp  readme.txt
src/CBiRRT/: cbirrt.cpp  cbirrt_test.cpp
src/CRRT/: crrt.cpp  crrt_test.cpp
src/DualCBiRRT/: dual_cbirrt.cpp  dual_cbirrt_test.cpp  dual_cbirrt_test_multi_times.cpp  ik_test.cpp  using_moveit_planner.cpp
src/DualCBiRRTEuler/: dual_cbirrt.cpp  dual_cbirrt_test.cpp  dual_cbirrt_test_multi_times.cpp  test_manipulability.cpp  (+1 more)
(+40 files in other folders)
